Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-2911

fix c++ version zeromq transport, the old version cannot work

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 0.9.3
    • C++ - Library
    • None
    • Patch Available

    Description

      GitHub user littletiny opened a pull request:

      https://github.com/apache/thrift/pull/315

      fix c++ version zeromq transport, the old version cannot work

      fix c++ version zeromq transport, the old version cannot work
      we need to override
      ```
      TTransport::write_virt TTransport::read_virt
      ```
      instead of
      ```
      TTransport::write TTransport::read
      ```

      You can merge this pull request into a Git repository by running:

      $ git pull https://github.com/littletiny/thrift master

      Alternatively you can review and apply these changes as the patch at:

      https://github.com/apache/thrift/pull/315.patch

      To close this pull request, make a commit to your master/trunk branch
      with (at least) the following in the commit message:

      This closes #315


      commit bf792bb89cab8e42bbde6e9965bef5c8f2deacd0
      Author: tiny <lox.xiao@gmail.com>
      Date: 2014-12-11T06:22:29Z

      fix c++ version zeromq transport, the old version cannot work


      Attachments

        Issue Links

          Activity

            People

              jensg Jens Geyer
              jensg Jens Geyer
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: