THRIFT-2911 fix c++ version zeromq transport, the old version cannot work Client: contrib Patch: tiny <lox.xiao@gmail.com>

This closes #315